# figment2-cloudflare-workers

./: .gitignore  CHANGELOG.md  Cargo.toml  package.json
.github/workflows/: check.yml  correctness.yml  release.yml
src/: lib.rs
test-worker/: Cargo.toml  wrangler.toml
test-worker/src/: lib.rs
tests/: integration.test.mjs
