[package]
name = "figment2-cloudflare-workers"
version = "0.1.0"
edition = "2021"
authors = ["Jacob Adam <software@jacobadam.net>"]
license = "Apache-2.0"
publish = true
description = "A figment2 configuration provider for Cloudflare Workers' environment bindings"
repository = "https://github.com/jakubadamw/figment2-cloudflare-workers"
keywords = ["figment", "configuration", "cloudflare", "workers"]
categories = ["config", "wasm"]

[dependencies]
figment2 = "0.11"
serde = { version = "1", features = ["derive"] }
worker = "0.7"

[lints.rust]
elided_lifetimes_in_paths = "deny"
let_underscore_drop = "allow"
nonstandard_style = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }
unused_crate_dependencies = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
